@@ -147,7 +147,7 @@ while ($row = mysql_fetch_array($result, MYSQL_ASSOC)) {
     } else {
       $note = $row["stops"] . " stops";
     }
-    if($row["codeshare"] == "*") {
+    if($row["codeshare"] == "Y") {
       $note = "Codeshare";
     }
   }
