@@ -1,9 +1,17 @@
-<b>2009-07-XX</b>
+<b>2009-07-14</b>
 
 * Quick search now supports airlines
 * Airline filter can now be used for airport route maps
+* Codeshare flights now shown as dotted lines
 * Distances can be shown in mi or km
 * Statsbox not shown in route map mode
+* Purged unused strings from localizations
+* Bugfix: Gap between world halves on some resolutions should be eliminated now
+* Bugfix: Refresh forced when changing language on logging in
+
+<b>2009-07-13</b>
+
+* Bug: Airport add from Import now works (2820603)
 
 <b>2009-07-02</b>
 
